--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,17 @@
 {
   "manifest_version": 2,
   "name": "TBD",
-  "version": "0.01"
+  "version": "0.01",
+  "background": {
+    "scripts": ["main.js"],
+    "persistent": false
+  },
+  "permissions": [
+    "tabs"
+  ],
+  "browser_action": {
+  },
+  "chrome_url_overrides": {
+    "newtab": "popup.html"
+  }
 }
