--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "TBD",
+  "name": "Unsearch",
   "version": "0.01",
   "background": {
     "scripts": ["main.js"],
@@ -10,8 +10,5 @@
     "tabs"
   ],
   "browser_action": {
-  },
-  "chrome_url_overrides": {
-    "newtab": "popup.html"
   }
 }
